added icons and tested axios get commands to import icons

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "feather-icons": "^4.28.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feather": "^2.0.8",
     "react-scripts": "3.4.3",
     "reactstrap": "^8.5.1",
     "use-position": "^0.0.7"
