--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
+    "react-hook-form": "^6.8.2",
     "react-scripts": "3.4.3",
     "reactstrap": "^8.5.1",
     "use-position": "^0.0.7"
